--- a/index.html
+++ b/index.html
@@ -240,13 +240,14 @@
                     <div
                         class="sm:w-fit sm:justify-between md:w-fit mt-4 md:justify-start  inline-flex border border-input-border rounded-3xl">
                         <span
-                            class="sm:w-50 w-20 py-3 sm:px-8 px-4 sm:max-w-[120px] md:py-[13px] md:w-[124px] xs:text-base text-sm flex items-center ease-out justify-center rounded-3xl cursor-pointer bg-[#A271F2] text-white font-medium transition-colors duration-[500ms]">Aylıq</span>
+                            class="ayliq_plan selected_plan_btn sm:w-50 w-20 py-3 sm:px-8 px-4 sm:max-w-[120px] md:py-[13px] md:w-[124px] xs:text-base text-sm flex items-center ease-out justify-center rounded-3xl cursor-pointer transition-colors duration-[500ms]">Aylıq</span>
                         <span
-                            class="sm:w-50 w-20 py-3 sm:px-8 px-4 sm:max-w-[120px] md:py-[13px] md:w-[124px] xs:text-base text-sm flex items-center ease-out justify-center rounded-3xl cursor-pointer text-[#94A3B8] bg-white">İllik</span>
+                            class="illik_plan unSelected_plan_btn sm:w-50 w-20 py-3 sm:px-8 px-4 sm:max-w-[120px] md:py-[13px] md:w-[124px] xs:text-base text-sm flex items-center ease-out justify-center rounded-3xl cursor-pointer transition-colors duration-[500ms]">İllik</span>
                     </div>
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 lg:mx-0 gap-2">
-                    <div class="plan_card economic_plan border-[1px] rounded-lg p-2 md:p-4 lg:p-6 cursor-pointer transition bg-[#FAFBFF]">
+                    <div
+                        class="plan_card economic_plan border-[1px] rounded-lg p-2 md:p-4 lg:p-6 cursor-pointer transition bg-[#FAFBFF]">
                         <div class="mb-5">
                             <span class="plan_price text-2xl md:text-4xl font-bold text-[#300B60]">$5</span>
                             <span class="plan_period text-sm font-semibold text-[#300B60] ml-1">/ay</span>
@@ -272,9 +273,12 @@
                                 <li><i class="fa-solid fa-check text-[#00B090] mr-2"></i>Fayl İdarəedici</li>
                             </ul>
                         </div>
-                        <button class="border border-[#A271F2] rounded-3xl text-sm font-semibold text-[#A271F2] text-center w-full py-2">Sifariş et</button>
+                        <button
+                            class="border border-[#A271F2] rounded-3xl text-sm font-semibold text-[#A271F2] text-center w-full py-2">Sifariş
+                            et</button>
                     </div>
-                    <div class="plan_card standart_plan selectedPlan border-[1px] rounded-lg p-2 md:p-4 lg:p-6 cursor-pointer transition bg-[#FAFBFF]">
+                    <div
+                        class="plan_card standart_plan selectedPlan border-[1px] rounded-lg p-2 md:p-4 lg:p-6 cursor-pointer transition bg-[#FAFBFF]">
                         <div class="mb-5">
                             <span class="plan_price text-2xl md:text-4xl font-bold text-[#300B60]">$5</span>
                             <span class="plan_period text-sm font-semibold text-[#300B60] ml-1">/ay</span>
@@ -300,9 +304,12 @@
                                 <li><i class="fa-solid fa-check text-[#00B090] mr-2"></i>Fayl İdarəedici</li>
                             </ul>
                         </div>
-                        <button class="border border-[#A271F2] rounded-3xl text-sm font-semibold text-[#A271F2] text-center w-full py-2">Sifariş et</button>
+                        <button
+                            class="border border-[#A271F2] rounded-3xl text-sm font-semibold text-[#A271F2] text-center w-full py-2">Sifariş
+                            et</button>
                     </div>
-                    <div class="plan_card professional_plan border-[1px] rounded-lg p-2 md:p-4 lg:p-6 cursor-pointer transition bg-[#FAFBFF]">
+                    <div
+                        class="plan_card professional_plan border-[1px] rounded-lg p-2 md:p-4 lg:p-6 cursor-pointer transition bg-[#FAFBFF]">
                         <div class="mb-5">
                             <span class="plan_price text-2xl md:text-4xl font-bold text-[#300B60]">$5</span>
                             <span class="plan_period text-sm font-semibold text-[#300B60] ml-1">/ay</span>
@@ -328,12 +335,102 @@
                                 <li><i class="fa-solid fa-check text-[#00B090] mr-2"></i>Fayl İdarəedici</li>
                             </ul>
                         </div>
-                        <button class="border border-[#A271F2] rounded-3xl text-sm font-semibold text-[#A271F2] text-center w-full py-2">Sifariş et</button>
+                        <button
+                            class="border border-[#A271F2] rounded-3xl text-sm font-semibold text-[#A271F2] text-center w-full py-2">Sifariş
+                            et</button>
                     </div>
                 </div>
             </section>
         </div>
 
+        <div class="container">
+            <section id="startup" class="py-16">
+                <div class="flex flex-col md:flex-row items-start md:items-center justify-between gap-5">
+                    <div>
+                        <h2 class="text-[22px] md:text-[42px] tracking-[0.1px] text-[#300B60] font-bold">Startuplar</h2>
+                        <p class="text-sm md:text-base lg:text-xl sm:tracking-[0.1px] sm:font-normal text-[#300B60]">
+                            Mütəxəssis məsləhətlərimizlə biznesinizi necə inkişaf etdirəcəyinizi öyrənin.</p>
+                    </div>
+                    <button
+                        class="px-5 py-[10px] text-white bg-[#A271F2] hover:bg-[#742DE4] active:bg-[#5c2da7] text-center text-sm rounded-[8px] font-semibold">
+                        Bütün StartUplar
+                        <i class="fa-solid fa-angles-right text-xs ml-2"></i>
+                    </button>
+                </div>
+                <div
+                    class="startuplar mx-auto mt-16 grid max-w-2xl auto-rows-fr grid-cols-1 gap-8 sm:mt-20 lg:mx-0 lg:max-w-none lg:grid-cols-3">
+                    <div
+                        class="startup_card bg-[#FAF4FF] p-5 overflow-hidden rounded-2xl transition-all duration-300 border">
+                        <div class="str_img w-full h-[250px] rounded-2xl overflow-hidden">
+                            <img src="img/startup1.png" alt="" class="w-full h-full object-cover cursor-pointer">
+                        </div>
+                        <h4 class="sm:mt-6 mt-3 text-lg font-semibold text-[#300B60]">Whiser.az</h4>
+                        <p class="text-xs md:text-base mt-2 text-[#7427AB]">Wisher.az xüsusi günləri xatırlamaq və qeyd
+                            etmək üçün şəxsi köməkçinizdir.</p>
+                        <button
+                            class="py-2 px-4 mt-4 text-white bg-[#A271F2] hover:bg-[#742DE4] active:bg-[#5c2da7] text-center rounded-[60px] font-semibold text-sm md:text-base">Ətraflı
+                            oxu...</button>
+                    </div>
+                    <div
+                        class="startup_card bg-[#FAF4FF] p-5 overflow-hidden rounded-2xl transition-all duration-300 border">
+                        <div class="str_img w-full h-[250px] rounded-2xl overflow-hidden">
+                            <img src="img/startup2.png" alt="" class="w-full h-full object-cover cursor-pointer">
+                        </div>
+                        <h4 class="sm:mt-6 mt-3 text-lg font-semibold text-[#300B60]">telefon.az</h4>
+                        <p class="text-xs md:text-base mt-2 text-[#7427AB]">Telefonların online alışı və satışı</p>
+                        <button
+                            class="py-2 px-4 mt-4 text-white bg-[#A271F2] hover:bg-[#742DE4] active:bg-[#5c2da7] text-center rounded-[60px] font-semibold text-sm md:text-base">Ətraflı
+                            oxu...</button>
+                    </div>
+                    <div
+                        class="startup_card bg-[#FAF4FF] p-5 overflow-hidden rounded-2xl transition-all duration-300 border">
+                        <div class="str_img w-full h-[250px] rounded-2xl overflow-hidden">
+                            <img src="img/startup3.jpg" alt="" class="w-full h-full object-cover cursor-pointer">
+                        </div>
+                        <h4 class="sm:mt-6 mt-3 text-lg font-semibold text-[#300B60]">Sayt.az</h4>
+                        <p class="text-xs md:text-base mt-2 text-[#7427AB]">Sayt.az 2004-cü ildən fəaliyyətə
+                            başlamışdır. 2004-2016 -cı illər ərzində Azərbaycan...</p>
+                        <button
+                            class="py-2 px-4 mt-4 text-white bg-[#A271F2] hover:bg-[#742DE4] active:bg-[#5c2da7] text-center rounded-[60px] font-semibold text-sm md:text-base">Ətraflı
+                            oxu...</button>
+                    </div>
+                </div>
+            </section>
+        </div>
+
+        <div class="stc_bg bg-[#A271F2]">
+            <div class="container">
+                <section id="statistika" class="py-10 lg:py-[100px] relative">
+                    <h2 class="text-[22px] md:text-[32px] tracking-[0.1px] text-center font-medium text-white p-0 mb-10">
+                        Statistikalarımız</h2>
+                    <div class="static_info lg:gap-0 mt-4 mx-auto flex flex-col items-center lg:flex-row w-[80%] text-center gap-y-4 lg:absolute bottom-[-60px] left-[10%]">
+                        <div class="text-[#4A2182] bg-white w-[300px] lg:w-[25%] py-8 lg:rounded-none rounded-lg">
+                            <h6 class="md:text-2xl text-xl font-bold text-center">20+ il</h6>
+                            <p class="text-sm mt-2 text-nowrap text-center">Biz Təcrübəmizə Güvənirik</p>
+                        </div>
+                        <div class="text-[#4A2182] bg-white w-[300px] lg:w-[25%] py-8 lg:rounded-none rounded-lg">
+                            <h6 class="md:text-2xl text-xl font-bold text-center">1000+</h6>
+                            <p class="text-sm mt-2 text-nowrap text-center">Məmnun Müştərilər</p>
+                        </div>
+                        <div class="text-[#4A2182] bg-white w-[300px] lg:w-[25%] py-8 lg:rounded-none rounded-lg">
+                            <h6 class="md:text-2xl text-xl font-bold text-center">200+</h6>
+                            <p class="text-sm mt-2 text-nowrap text-center">Tamamlanan Layihələr</p>
+                        </div>
+                        <div class="text-[#4A2182] bg-white w-[300px] lg:w-[25%] py-8 lg:rounded-none rounded-lg">
+                            <h6 class="md:text-2xl text-xl font-bold text-center">25+</h6>
+                            <p class="text-sm mt-2 text-nowrap text-center">Peşəkarlar Komandası</p>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
+
+        <div class="container">
+            <section id="komanda" class="py-20">
+                <h2 class="text-lg md:text-[22px] lg:text-[32px] text-[#300B60] text-center font-bold">Komandamızın Pərdə Arxası</h2>
+                <p class="text-base md:text-xl text-[#4A2182] text-center font-semibold">Komandamızla Tanış Olaq</p>
+            </section>
+        </div>
 
 
     </main>
