--- a/index.html
+++ b/index.html
@@ -401,9 +401,11 @@
         <div class="stc_bg bg-[#A271F2]">
             <div class="container">
                 <section id="statistika" class="py-10 lg:py-[100px] relative">
-                    <h2 class="text-[22px] md:text-[32px] tracking-[0.1px] text-center font-medium text-white p-0 mb-10">
+                    <h2
+                        class="text-[22px] md:text-[32px] tracking-[0.1px] text-center font-medium text-white p-0 mb-10">
                         Statistikalarımız</h2>
-                    <div class="static_info lg:gap-0 mt-4 mx-auto flex flex-col items-center lg:flex-row w-[80%] text-center gap-y-4 lg:absolute bottom-[-60px] left-[10%]">
+                    <div
+                        class="static_info lg:gap-0 mt-4 mx-auto flex flex-col items-center lg:flex-row w-[80%] text-center gap-y-4 lg:absolute z-10 bottom-[-60px] left-[10%]">
                         <div class="text-[#4A2182] bg-white w-[300px] lg:w-[25%] py-8 lg:rounded-none rounded-lg">
                             <h6 class="md:text-2xl text-xl font-bold text-center">20+ il</h6>
                             <p class="text-sm mt-2 text-nowrap text-center">Biz Təcrübəmizə Güvənirik</p>
@@ -426,9 +428,108 @@
         </div>
 
         <div class="container">
-            <section id="komanda" class="py-20">
-                <h2 class="text-lg md:text-[22px] lg:text-[32px] text-[#300B60] text-center font-bold">Komandamızın Pərdə Arxası</h2>
+            <section id="komanda" class="py-20 mt-10">
+                <h2 class="text-lg mb-3 md:text-[22px] lg:text-[32px] text-[#300B60] text-center font-bold">Komandamızın
+                    Pərdə Arxası</h2>
                 <p class="text-base md:text-xl text-[#4A2182] text-center font-semibold">Komandamızla Tanış Olaq</p>
+                <div class="mt-10 flex flex-col md:flex-row flex-wrap justify-center gap-5">
+                    <div
+                        class="relative box-border w-[250px] justify-center items-center border-2 border-[#A271F2] rounded-[30px] p-4">
+                        <img src="img/k-1.jpg" alt="team" class="w-full mx-auto h-[300px] rounded-[14px] object-cover">
+                        <div
+                            class="absolute left-[16px] bottom-[14px] bg-white w-[214px] box-border h-[80px] py-4 z-10 rounded-[15px]">
+                            <h4 class="text-[#300B60] sm:text-xl text-base font-bold text-center">Ramil Mirzayev
+                            </h4>
+                            <p class="text-[#4A2182] text-sm font-bold text-center">CEO</p>
+                        </div>
+                    </div>
+                    <div
+                        class="relative box-border w-[250px] justify-center items-center border-2 border-[#A271F2] rounded-[30px] p-4">
+                        <img src="img/k-2.jpg" alt="team" class="w-full mx-auto h-[300px] rounded-[14px] object-cover">
+                        <div
+                            class="absolute left-[16px] bottom-[14px] bg-white w-[214px] box-border h-[80px] py-4 z-10 rounded-[15px]">
+                            <h4 class="text-[#300B60] sm:text-xl text-base font-bold text-center">Rasim Abdurrahman
+                            </h4>
+                            <p class="text-[#4A2182] text-sm font-bold text-center">Project Manager</p>
+                        </div>
+                    </div>
+                    <div
+                        class="relative box-border w-[250px] justify-center items-center border-2 border-[#A271F2] rounded-[30px] p-4">
+                        <img src="img/k-3.jpg" alt="team" class="w-full mx-auto h-[300px] rounded-[14px] object-cover">
+                        <div
+                            class="absolute left-[16px] bottom-[14px] bg-white w-[214px] box-border h-[80px] py-4 z-10 rounded-[15px]">
+                            <h4 class="text-[#300B60] sm:text-xl text-base font-bold text-center">Ahmad Rustamov
+                            </h4>
+                            <p class="text-[#4A2182] text-sm font-bold text-center">Team Lead</p>
+                        </div>
+                    </div>
+                    <div
+                        class="relative box-border w-[250px] justify-center items-center border-2 border-[#A271F2] rounded-[30px] p-4">
+                        <img src="img/k-4.jpg" alt="team" class="w-full mx-auto h-[300px] rounded-[14px] object-cover">
+                        <div
+                            class="absolute left-[16px] bottom-[14px] bg-white w-[214px] box-border h-[80px] py-4 z-10 rounded-[15px]">
+                            <h4 class="text-[#300B60] sm:text-xl text-base font-bold text-center">Murad Aghamedov
+                            </h4>
+                            <p class="text-[#4A2182] text-sm font-bold text-center">Backend Developer</p>
+                        </div>
+                    </div>
+                    <div
+                        class="relative box-border w-[250px] justify-center items-center border-2 border-[#A271F2] rounded-[30px] p-4">
+                        <img src="img/k-5.png" alt="team" class="w-full mx-auto h-[300px] rounded-[14px] object-cover">
+                        <div
+                            class="absolute left-[16px] bottom-[14px] bg-white w-[214px] box-border h-[80px] py-4 z-10 rounded-[15px]">
+                            <h4 class="text-[#300B60] sm:text-xl text-base font-bold text-center">Fuad Mammadov
+                            </h4>
+                            <p class="text-[#4A2182] text-sm font-bold text-center">Frontend Developer</p>
+                        </div>
+                    </div>
+                    <div
+                        class="relative box-border w-[250px] justify-center items-center border-2 border-[#A271F2] rounded-[30px] p-4">
+                        <img src="img/k-6.jpg" alt="team" class="w-full mx-auto h-[300px] rounded-[14px] object-cover">
+                        <div
+                            class="absolute left-[16px] bottom-[14px] bg-white w-[214px] box-border h-[80px] py-4 z-10 rounded-[15px]">
+                            <h4 class="text-[#300B60] sm:text-xl text-base font-bold text-center">Mirafgan Eminbayli
+                            </h4>
+                            <p class="text-[#4A2182] text-sm font-bold text-center">Frontend Developer</p>
+                        </div>
+                    </div>
+                    <div
+                        class="relative box-border w-[250px] justify-center items-center border-2 border-[#A271F2] rounded-[30px] p-4">
+                        <img src="img/k-7.jpg" alt="team" class="w-full mx-auto h-[300px] rounded-[14px] object-cover">
+                        <div
+                            class="absolute left-[16px] bottom-[14px] bg-white w-[214px] box-border h-[80px] py-4 z-10 rounded-[15px]">
+                            <h4 class="text-[#300B60] sm:text-xl text-base font-bold text-center">Idrak Mustafazada
+                            </h4>
+                            <p class="text-[#4A2182] text-sm font-bold text-center">Customer Support</p>
+                        </div>
+                    </div>
+                    <div
+                        class="relative box-border w-[250px] justify-center items-center border-2 border-[#A271F2] rounded-[30px] p-4">
+                        <img src="img/k-8.jpg" alt="team" class="w-full mx-auto h-[300px] rounded-[14px] object-cover">
+                        <div
+                            class="absolute left-[16px] bottom-[14px] bg-white w-[214px] box-border h-[80px] py-4 z-10 rounded-[15px]">
+                            <h4 class="text-[#300B60] sm:text-xl text-base font-bold text-center">Saida Chinani
+                            </h4>
+                            <p class="text-[#4A2182] text-sm font-bold text-center">SMM</p>
+                        </div>
+                    </div>
+                    <div
+                        class="relative box-border w-[250px] justify-center items-center border-2 border-[#A271F2] rounded-[30px] p-4">
+                        <img src="img/k-9.jpg" alt="team" class="w-full mx-auto h-[300px] rounded-[14px] object-cover">
+                        <div
+                            class="absolute left-[16px] bottom-[14px] bg-white w-[214px] box-border h-[80px] py-4 z-10 rounded-[15px]">
+                            <h4 class="text-[#300B60] sm:text-xl text-base font-bold text-center">Matanat M.
+                            </h4>
+                            <p class="text-[#4A2182] text-sm font-bold text-center">Frontend Developer</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+
+        <div class="container">
+            <section id="sozIsler">
+
             </section>
         </div>
 
