--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="navigation fixed w-full">
         <nav class="px-10 py-4 relative bg-white mx-auto">
             <div class="parent_div flex justify-between items-center">
-                <a class="logo" href="#"><img class="w-[120px]" src="img/saytaz.svg" alt="logo"></a>
+                <a class="logo" href="index.html"><img class="w-[120px]" src="img/saytaz.svg" alt="logo"></a>
                 <div
                     class="links bg-white absolute z-20 lg:static top-0 right-0 p-10 lg:p-0 h-screen w-2/3 hidden lg:flex lg:max-w-[1000px]">
                     <i class="fa-solid fa-xmark text-2xl cursor-pointer p-1 absolute top-[18px] right-10"
