--- a/saytCalc.html
+++ b/saytCalc.html
@@ -122,6 +122,31 @@
                                 <p class="sehife_qiymet text-[#A271F2] text-[22px] font-semibold">1 səhifə / ₼ 100</p>
                             </div>
                         </div>
+                        <h6 class="text-[#212529] text-lg font-medium mt-10">Veb sayt əlavələri</h6>
+                        <div class="mt-4 bg-[#f8f8fa] rounded-md">
+                            <div class="sayt_elaveler grid grid-cols-1 md:grid-cols-2 gap-3 p-5"></div>
+                            <div class="flex justify-between items-center mt-4 p-4 bg-[#4a84bf26]">
+                                <p class="text-[#285a70]">Xərc :</p>
+                                <p class="elaveler_qiymet text-[#A271F2] text-[22px] font-semibold">₼ 0</p>
+                            </div>
+                        </div>
+                        <h6 class="text-[#212529] text-lg font-medium mt-10">Axtarış motorunun optimallaşdırılması</h6>
+                        <div class="mt-4 bg-[#f8f8fa] rounded-md">
+                            <div class="axtaris_motoru grid grid-cols-1 md:grid-cols-2 gap-3 p-5">
+
+                                <label class="inline-flex items-center cursor-pointer">
+                                    <input type="checkbox" value="50"
+                                        class="axtaris_checkbox h-5 w-5 bg-[#A271F2] text-[#A271F2] rounded-lg focus:ring-0 focus:outline-none">
+                                    <span class="ml-2 text-gray-700 text-lg font-medium">Sitemap</span>
+                                </label>
+
+                            </div>
+                            <div class="flex justify-between items-center mt-4 p-4 bg-[#4a84bf26]">
+                                <p class="text-[#285a70]">Xərc :</p>
+                                <p class="axtaris_qiymet text-[#A271F2] text-[22px] font-semibold">₼ 0</p>
+                            </div>
+                        </div>
+
                     </div>
                     <div class="toplam_qiymet lg:w-[30%] w-full bg-white p-6">
                         <div class="qiymetler flex flex-col gap-4">
@@ -132,7 +157,7 @@
                             </p>
                             <p class="flex justify-between items-center">
                                 <span class="text-[#8b8b9a]">Əlavələr:</span>
-                                <span class="text-[#A271F2] font-bold text-lg">₼ 0</span>
+                                <span class="elaveler_toplam text-[#A271F2] font-bold text-lg">₼ 0</span>
                             </p>
                             <p class="flex justify-between items-center">
                                 <span class="text-[#8b8b9a]">SEO :</span>
